syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.restate.sdk.testing.testservices";
option java_outer_classname = "GreeterTwoProto";

import "dev/restate/ext.proto";
import "google/protobuf/empty.proto";

package test;

service GreeterTwo {
  option (dev.restate.ext.service_type) = KEYED;

  rpc CountForwardedGreetings (GreeterTwoRequest) returns (GreeterTwoResponse);

  rpc Awake (AwakeServiceRequest) returns (google.protobuf.Empty);
}

message AwakeServiceRequest {
  string service_name = 1;
  bytes instance_key = 2;
  bytes invocation_id = 3;
  uint32 entry_index = 4;
}

message GreeterTwoRequest {
  string name = 1 [(dev.restate.ext.field) = KEY];
}

message GreeterTwoResponse {
  string message = 1;
}
